src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Patch_Requested_Version__c</fullName>
        <label>Patch Requested Version</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>7.10</fullName>
                </value>
                <value>
                    <fullName>7.9 SP1</fullName>
                </value>
                <value>
                    <fullName>7.0</fullName>
                </value>
                <value>
                    <fullName>6.7</fullName>
                </value>
                <value>
                    <fullName>6.6</fullName>
                </value>
                <value>
                    <fullName>6.5</fullName>
                </value>
                <value>
                    <fullName>6.4 SP5</fullName>
                </value>
                <value>
                    <fullName>6.4.SP4</fullName>
                </value>
                <value>
                    <fullName>6.4.SP3</fullName>
                </value>
                <value>
                    <fullName>6.4.SP2</fullName>
                </value>
                <value>
                    <fullName>6.4.SP1</fullName>
                </value>
                <value>
                    <fullName>6.4</fullName>
                </value>
                <value>
                    <fullName>6.3</fullName>
                </value>
                <value>
                    <fullName>6.2</fullName>
                </value>
                <value>
                    <fullName>6.1</fullName>
                </value>
                <value>
                    <fullName>6.0</fullName>
                </value>
                <value>
                    <fullName>5.14</fullName>
                </value>
                <value>
                    <fullName>5.13</fullName>
                </value>
                <value>
                    <fullName>5.12</fullName>
                </value>
                <value>
                    <fullName>5.11</fullName>
                </value>
                <value>
                    <fullName>5.10</fullName>
                </value>
                <value>
                    <fullName>5.9 SP1</fullName>
                </value>
                <value>
                    <fullName>5.9</fullName>
                </value>
                <value>
                    <fullName>5.8 SP11</fullName>
                </value>
                <value>
                    <fullName>5.8 SP10</fullName>
                </value>
                <value>
                    <fullName>5.8 SP9</fullName>
                </value>
                <value>
                    <fullName>5.8 SP8</fullName>
                </value>
                <value>
                    <fullName>5.8 SP7</fullName>
                </value>
                <value>
                    <fullName>5.8 SP6</fullName>
                </value>
                <value>
                    <fullName>5.8 SP5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Patch_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Internal use for processing patch requests from a client.</inlineHelpText>
        <label>Patch Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Patch_Status__c</fullName>
        <formula>text(Potential_Defect__r.Patch_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Internal use - Patch status</inlineHelpText>
        <label>Patch Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pending_Roadmap_Planning_Reason__c</fullName>
        <description>This field is required on TriTech tickets via validation rule when the ticket status = Pending Roadmap Planning (an open status)</description>
        <label>Pending Roadmap Planning Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>GMC</fullName>
                </value>
                <value>
                    <fullName>Funnel - Market Features</fullName>
                </value>
                <value>
                    <fullName>Funnel - Customer Driven</fullName>
                </value>
                <value>
                    <fullName>Funnel - Supportability</fullName>
                </value>
                <value>
                    <fullName>Funnel - Deployability</fullName>
                </value>
                <value>
                    <fullName>Funnel - Technical Debt</fullName>
                </value>
                <value>
                    <fullName>Funnel - Maintenance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Planned_Release__c</fullName>
        <formula>Potential_Defect__r.Planned_Release__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Planned Release</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_Product_Family__c</fullName>
        <label>xPortal Product Family</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Potential_Defect__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Potential Defect</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Potential_Defect__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Potential Defect, Enhancement</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Potential_Defect__c</referenceTo>
        <relationshipLabel>Associated Tickets</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pre_check_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pre-check Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Family_WMP__c</fullName>
        <description>Ticket Product Family feeds from the associated service contract&apos;s product family.</description>
        <formula>TEXT(Service_Contract_WMP__r.Product_Family_WMP__c)</formula>
        <label>Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <description>Product group determined via contract type. Field utilized on Service Contract &gt; Ticket &gt; Potential Defect</description>
        <formula>Service_Contract_WMP__r.Product_Group__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Product group is determined by the associated service contract type.</inlineHelpText>
        <label>Product Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Sub_Module__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Sub-Module</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product_Sub_Module__c.Product__c</field>
                <operation>equals</operation>
                <valueField>$Source.ProductId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product_Sub_Module__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RCA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Root Cause Analysis</description>
        <inlineHelpText>Root Cause Analysis ticket</inlineHelpText>
        <label>RCA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RMS_BA_Email__c</fullName>
        <label>RMS BA Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ROID__c</fullName>
        <inlineHelpText>Unique record ROID</inlineHelpText>
        <label>ROID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Numbers__c</fullName>
        <inlineHelpText>Examples: ICR, Citation, Event, CFS</inlineHelpText>
        <label>Record Number(s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Released_In__c</fullName>
        <formula>Potential_Defect__r.Released_In__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Released In</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reported_Major_Version_WMP__c</fullName>
        <inlineHelpText>Choose your TriTech Software Version</inlineHelpText>
        <label>Reported Major Version</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Undecided</fullName>
                </value>
                <value>
                    <fullName>7.10</fullName>
                </value>
                <value>
                    <fullName>7.9 SP1</fullName>
                </value>
                <value>
                    <fullName>7.0</fullName>
                </value>
                <value>
                    <fullName>6.7</fullName>
                </value>
                <value>
                    <fullName>6.6</fullName>
                </value>
                <value>
                    <fullName>6.5</fullName>
                </value>
                <value>
                    <fullName>6.4 SP5</fullName>
                </value>
                <value>
                    <fullName>6.4.SP4</fullName>
                    <label>6.4 SP4</label>
                </value>
                <value>
                    <fullName>6.4.SP3</fullName>
                    <label>6.4 SP3</label>
                </value>
                <value>
                    <fullName>6.4.SP2</fullName>
                    <label>6.4 SP2</label>
                </value>
                <value>
                    <fullName>6.4.SP1</fullName>
                </value>
                <value>
                    <fullName>6.4</fullName>
                </value>
                <value>
                    <fullName>6.3</fullName>
                </value>
                <value>
                    <fullName>6.2</fullName>
                </value>
                <value>
                    <fullName>6.1</fullName>
                </value>
                <value>
                    <fullName>6.0</fullName>
                </value>
                <value>
                    <fullName>5.15</fullName>
                </value>
                <value>
                    <fullName>5.14</fullName>
                </value>
                <value>
                    <fullName>5.13</fullName>
                </value>
                <value>
                    <fullName>5.12</fullName>
                </value>
                <value>
                    <fullName>5.11 SP2</fullName>
                </value>
                <value>
                    <fullName>5.11 SP1</fullName>
                </value>
                <value>
                    <fullName>5.11</fullName>
                </value>
                <value>
                    <fullName>5.10 SP1</fullName>
                </value>
                <value>
                    <fullName>5.10</fullName>
                </value>
                <value>
                    <fullName>5.9 SP1</fullName>
                </value>
                <value>
                    <fullName>5.9</fullName>
                </value>
                <value>
                    <fullName>5.8 SP13</fullName>
                </value>
                <value>
                    <fullName>5.8 SP12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reported_Minor_Version__c</fullName>
        <inlineHelpText>EMS Format:  X (HFX if applicable)
IMC Build Format:  XX.XX
VIsiNet Format: Numeric, no spaces</inlineHelpText>
        <label>Reported Minor Version</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reported_Patch_WMP__c</fullName>
        <label>Reported Patch</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reproducible_WMP__c</fullName>
        <label>Client Reproducible</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Client Site - Consistent</fullName>
                </value>
                <value>
                    <fullName>Client Site - Intermittent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Priority__c</fullName>
        <label>Request Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Resolution_Notes_WMP__c</fullName>
        <label>Resolution Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Resolution_Time__c</fullName>
        <formula>Round((  ClosedDate - Customer_Contact_Date_Time_WMP__c),2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Resolution Time (days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Resolved_Date__c</fullName>
        <inlineHelpText>Internal only - Enter the date/time when TriTech staff resolved the issue even though the ticket is still in an open status due to customer request.</inlineHelpText>
        <label>Resolved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Resolved_Time__c</fullName>
        <formula>Round(( Resolved_Date__c  - CreatedDate ),2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Resolved time = Resolved Date/Time - Ticket Creation Date/Time</inlineHelpText>
        <label>Resolved Time (Days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Response_Time__c</fullName>
        <formula>Round((( Customer_Contact_Date_Time_WMP__c - CreatedDate ) * 24) + (1/30), 2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Response Time (hrs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Response_Time_min__c</fullName>
        <formula>Round((  Customer_Contact_Date_Time_WMP__c  -  CreatedDate ),2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Response time = Customer Contacted Date/Time - Ticket Creation Date/Time</inlineHelpText>
        <label>Response Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SCID__c</fullName>
        <description>This field is to receive the service contract from the portal user. The portal user does not have access to the Service Contract. Apex will update the service contract on the case using this field.</description>
        <label>SCID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCTY__c</fullName>
        <label>SCTY</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SC_Number__c</fullName>
        <formula>Service_Contract_WMP__r.ContractNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SC Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SE_Assistance_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SE Assistance Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SE_Contact__c</fullName>
        <label>SE Contact</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Edwin Juarez</fullName>
                </value>
                <value>
                    <fullName>Ashley Durnan</fullName>
                </value>
                <value>
                    <fullName>Bradley Holdegraver</fullName>
                </value>
                <value>
                    <fullName>Chris Velasco</fullName>
                </value>
                <value>
                    <fullName>Craig Simons</fullName>
                </value>
                <value>
                    <fullName>Kemi Darbeau</fullName>
                </value>
                <value>
                    <fullName>Michael Randall</fullName>
                </value>
                <value>
                    <fullName>Nate Novak</fullName>
                </value>
                <value>
                    <fullName>William Haladay</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SE_Status__c</fullName>
        <label>SE Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Requested</fullName>
                </value>
                <value>
                    <fullName>Blocked</fullName>
                    <isActive>false</isActive>
                    <label>Blocked</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                    <isActive>false</isActive>
                    <label>In Progress</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SE_Task_List__c</fullName>
        <label>SE Task List</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AFR</fullName>
                </value>
                <value>
                    <fullName>ANI/ALI</fullName>
                </value>
                <value>
                    <fullName>ASAP</fullName>
                </value>
                <value>
                    <fullName>CAD to CAD</fullName>
                </value>
                <value>
                    <fullName>CAD to Ext</fullName>
                </value>
                <value>
                    <fullName>CFS.</fullName>
                    <label>CFS</label>
                </value>
                <value>
                    <fullName>CFS Test</fullName>
                </value>
                <value>
                    <fullName>CFS Training</fullName>
                </value>
                <value>
                    <fullName>CIM.</fullName>
                    <label>CIM</label>
                </value>
                <value>
                    <fullName>CIM Test</fullName>
                </value>
                <value>
                    <fullName>CIM Training</fullName>
                </value>
                <value>
                    <fullName>DR</fullName>
                </value>
                <value>
                    <fullName>Ext to CAD</fullName>
                </value>
                <value>
                    <fullName>GIS Validation.</fullName>
                    <label>GIS Validation</label>
                </value>
                <value>
                    <fullName>GIS Validation Test</fullName>
                </value>
                <value>
                    <fullName>GIS Validation Training</fullName>
                </value>
                <value>
                    <fullName>Incident Data Conversion</fullName>
                </value>
                <value>
                    <fullName>Jail/RMS.</fullName>
                    <label>Jail/RMS</label>
                </value>
                <value>
                    <fullName>Jail/RMS Test</fullName>
                </value>
                <value>
                    <fullName>Jail/RMS Training</fullName>
                </value>
                <value>
                    <fullName>MCC7500</fullName>
                </value>
                <value>
                    <fullName>Paging</fullName>
                </value>
                <value>
                    <fullName>Premise Caution Notes Conversion</fullName>
                </value>
                <value>
                    <fullName>PTT</fullName>
                </value>
                <value>
                    <fullName>Records Check</fullName>
                </value>
                <value>
                    <fullName>Station Alerting</fullName>
                </value>
                <value>
                    <fullName>Station Printing</fullName>
                </value>
                <value>
                    <fullName>Telestaff</fullName>
                </value>
                <value>
                    <fullName>TTMS/RMS.</fullName>
                    <label>TTMS/RMS</label>
                </value>
                <value>
                    <fullName>TTMS/RMS Test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SQL_Installation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SQL Installation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SQL_Upgrade__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SQL Upgrade</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Order_Number__c</fullName>
        <inlineHelpText>Sales order number associated to training</inlineHelpText>
        <label>Sales Order Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secure_Folder_Path__c</fullName>
        <description>Whenever a backup location for customer connection related folders is necessary due to system failure, do the following:

Regular folder path formula: ohio

Backup folder path formula: Replace &quot;ohio&quot; with TTCHdfs</description>
        <formula>IF(Product_Family_WMP__c == &apos;Inform&apos;, &quot;\\\\ohio\\CJIS\\Inform\\&quot;&amp;Account.Secure_Folder_ID__c,
IF(Product_Family_WMP__c == &apos;911&apos;, &quot;\\\\ohio\\CJIS\\Inform\\&quot;&amp;Account.Secure_Folder_ID__c,
IF(Product_Family_WMP__c == &apos;Tiburon&apos;, &quot;\\\\ohio\\CJIS\\Inform\\&quot;&amp;Account.Secure_Folder_ID__c,
IF(Product_Family_WMP__c == &apos;VisiNet&apos;, &quot;\\\\ohio\\CJIS\\Inform\\&quot;&amp;Account.Secure_Folder_ID__c,
IF(Product_Family_WMP__c == &apos;VisionAIR&apos;, &quot;\\\\ohio\\CJIS\\Inform\\&quot;&amp;Account.Secure_Folder_ID__c,

IF(Product_Family_WMP__c == &apos;EMS&apos;, &quot;\\\\ohio\\CRM\\EMS\\&quot;&amp;Account.Secure_Folder_ID__c,

IF(Product_Family_WMP__c == &apos;IMC&apos;, &quot;\\\\ohio\\CRM\\IMC\\&quot;&amp;Account.Secure_Folder_ID__c,

IF(Product_Family_WMP__c == &apos;ETI&apos;, &quot;\\\\ohio\\CRM\\Zuercher\\&quot;&amp;Account.Secure_Folder_ID__c,
IF(Product_Family_WMP__c == &apos;LETG&apos;, &quot;\\\\ohio\\CRM\\Zuercher\\&quot;&amp;Account.Secure_Folder_ID__c,
IF(Product_Family_WMP__c == &apos;Zuercher&apos;, &quot;\\\\ohio\\CRM\\Zuercher\\&quot;&amp;Account.Secure_Folder_ID__c,
IF(Product_Family_WMP__c == &apos;Impact&apos;, &quot;\\\\ohio\\CJIS\\Impact\\&quot;&amp;Account.Secure_Folder_ID__c,
&apos;&apos;)))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Copy the Secure Folder Path into Windows Explorer</inlineHelpText>
        <label>Secure Folder Path</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Email_DateTime__c</fullName>
        <label>Send Email DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Send_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sensitive_Customer_Indicator__c</fullName>
        <formula>Account.Sensitive_Customer_Indicator__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sensitive Customer Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sensitive_Customer__c</fullName>
        <formula>Account.Sensitive_Account_WMP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sensitive Customer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Contract_WMP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Contract Name</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>ServiceContract.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>ServiceContract</referenceTo>
        <relationshipLabel>Tickets</relationshipLabel>
        <relationshipName>Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <description>MOL Use Only:  Ticket &gt; Defect &gt; TFS</description>
        <inlineHelpText>MOL Use Only</inlineHelpText>
        <label>Severity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Severe</fullName>
                </value>
                <value>
                    <fullName>2 - Critical</fullName>
                </value>
                <value>
                    <fullName>3 - Non-critical / Annoying</fullName>
                </value>
                <value>
                    <fullName>4 - Inconvenience / Cosmetic</fullName>
                </value>
                <value>
                    <fullName>5 - Enhancement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Short_Issue_Summary_WMP__c</fullName>
        <label>Short Issue Summary</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Steps_to_Recreate_Issue_WMP__c</fullName>
        <label>INTERNAL Steps to Recreate Issue</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Target_Patch_Release_Date__c</fullName>
        <formula>Potential_Defect__r.Target_Patch_Release_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Patch Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tiburon_Group_Name__c</fullName>
        <label>Tiburon Group Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tiburon_Task_List__c</fullName>
        <label>Tiburon Task List</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CIS Task – ANI/ALI</fullName>
                </value>
                <value>
                    <fullName>CIS Task – CAD/RMS Integration</fullName>
                </value>
                <value>
                    <fullName>CIS Task – CAD File Maintenance Conversion</fullName>
                </value>
                <value>
                    <fullName>CIS Task – CAD Histories Conversion</fullName>
                </value>
                <value>
                    <fullName>CIS Task – CAD Warehouse Conversion</fullName>
                </value>
                <value>
                    <fullName>CIS Task - Go Live Support</fullName>
                </value>
                <value>
                    <fullName>CIS Task - Hardware Prep</fullName>
                </value>
                <value>
                    <fullName>CIS Task – Install CAD</fullName>
                </value>
                <value>
                    <fullName>CIS Task – Install WebQuery</fullName>
                </value>
                <value>
                    <fullName>CIS Task – Interface</fullName>
                </value>
                <value>
                    <fullName>CIS Task – Interface #2</fullName>
                </value>
                <value>
                    <fullName>CIS Task - Technical Handoff</fullName>
                </value>
                <value>
                    <fullName>CIS Task - Technical Meeting</fullName>
                </value>
                <value>
                    <fullName>DBA Task – DB Migrate - CAD</fullName>
                </value>
                <value>
                    <fullName>DBA Task – DB Migrate - Copperfire</fullName>
                </value>
                <value>
                    <fullName>DBA Task – DB Migrate - DW</fullName>
                </value>
                <value>
                    <fullName>DBA Task – DB Migrate - Fire</fullName>
                </value>
                <value>
                    <fullName>DBA Task – DB Migrate - RMS</fullName>
                </value>
                <value>
                    <fullName>DBA Task - Go Live Support</fullName>
                </value>
                <value>
                    <fullName>DBA Task – Interface</fullName>
                </value>
                <value>
                    <fullName>DBA Task – Interface #2</fullName>
                </value>
                <value>
                    <fullName>DBA Task – Maintenance plans</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TicketURL__c</fullName>
        <formula>LEFT( $Api.Partner_Server_URL_230 , FIND(&apos;services/Soap/c/23.0&apos;, $Api.Enterprise_Server_URL_230) -1) &amp;  Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ticket URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ticket_Age__c</fullName>
        <description>Shows the age of the ticket from today - Created Date</description>
        <formula>IF( IsClosed, null, NOW() - CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ticket Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ticket_Comment_Added_Date_Time_Update__c</fullName>
        <description>Ticket field updated via workflow rule when a new case comment is added.  The update of this field will trigger the last modified date on the ticket to update.

WF Rule Name:  Ticket Comment Added Date/Time Update</description>
        <label>Ticket Comment Added Date/Time Update</label>
        <type>DateTime</type>
    </fields>
</CustomObject>